--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Django==1.8.7
-gunicorn==19.4.1
-python-memcached==1.57
-# doesn't work for Py3?
-# pylibmc==1.5.0
+Django==1.4.21
+# Django==1.8.7
+gunicorn==0.17.4
+python-memcached==1.48
